# kernel

./: .clang-format  .gitmodules  GNUmakefile  meson.build
kernel/: meson.build
kernel/platform/amd64/system/: cpu.cpp  debug.cpp  gdt.h
kernel/src/: main.cpp  runtime.cpp
kernel/src/kernel/: cpu.h
kernel/src/lib/: assert.h  atomic.h  misc.h  print.cpp  print.h  spinlock.h  string_view.h  variant.h
kernel/src/memory/: phys.cpp  phys.h  pmem.cpp  pmem.h
platform/amd64/: linker.ld  meson.build
platform/amd64/system/: cpu.h
src/: main.cpp
src/lib/: aligned.h  atomic.h  list.h  optional.h  print.cpp  print.h  spinlock.h
src/memory/: pmem.cpp
tools/: mkiso-amd64.sh  qemu-amd64.sh
